[package]
name = "tutorial"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "ad24915e58" }

# [[bin]]
# name = "client_tutorial"
# path = "src/client.rs"
# required-features = ["client"]

[[bin]]
name = "server_tutorial"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
